# AXIOM_Adaptive_RAG

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt  server.py
backend/alembic/: env.py
backend/alembic/versions/: 22496c2e6b17_initial_schema.py
backend/axiom/: config.py
backend/axiom/cache/: semantic_cache.py
backend/axiom/eval_suite/: benchmark.py  runner.py  stress_test.py
backend/axiom/evaluation/: claude_evaluator.py  critic_llm.py  ragas_scorer.py  thresholds.py
backend/axiom/graph/: builder.py  graph.py  state.py  sub_query_runner.py
backend/axiom/graph/nodes/: check_cache.py  classify_query.py  decompose_query.py  evaluate_answer.py  finalize_answer.py  generate_answer.py  rerank_chunks.py  retrieve_bm25.py  retrieve_hybrid.py  retrieve_vector.py  rewrite_query.py  route_retrieval.py  web_search_node.py
backend/axiom/ingest/: indexer.py  loader.py
backend/axiom/llm/: client.py
backend/axiom/observability/: langsmith.py
backend/axiom/retrieval/: bm25_index.py  embeddings.py  hybrid_fusion.py  reranker.py  vector_store.py
backend/axiom/search/: web_search.py
backend/scripts/: seed_sample_docs.py  start.sh
backend/tests/: conftest.py  test_bm25_index.py  test_claude_evaluator.py  test_confidence_band.py  test_cosine_similarity.py  test_embedding_dimension.py  test_ragas_scorer.py  test_system_health.py  test_web_search_fallback.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  config.js  index.css
frontend/src/components/axiom/: AnswerPanel.js  (+8 more)
